# GeoRAG

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMATTING.md  LICENSE  Makefile  README.md  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/: README.md
crates/georag-api/: Cargo.toml
crates/georag-api/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  router.rs  routes.rs  state.rs
crates/georag-api/src/dto/: request.rs  response.rs
crates/georag-api/src/handlers/: datasets.rs  health.rs  index.rs  ingest.rs  mod.rs  query.rs  workspaces.rs
crates/georag-api/src/services/: ingest.rs  mod.rs  query.rs
crates/georag-cli/: Cargo.toml
crates/georag-cli/src/: auto_detect.rs  batch.rs  cli.rs  config.rs  config_loader.rs  dry_run.rs  errors.rs  interactive.rs  main.rs  output.rs  output_types.rs  progress.rs  storage.rs
crates/georag-cli/src/commands/: add.rs  build.rs  db.rs  doctor.rs  index.rs  init.rs  inspect.rs  migrate.rs  mod.rs  query.rs  status.rs
crates/georag-cli/tests/: output_formatting_test.rs
crates/georag-core/: Cargo.toml  build.rs
crates/georag-core/src/: config.rs  error.rs  lib.rs  models.rs  ports.rs  processing.rs
crates/georag-core/src/formats/: docx.rs  gdal_utils.rs  geojson.rs  gpx.rs  kml.rs  mod.rs  pdf.rs  shapefile.rs  validation.rs
crates/georag-core/src/geo/: index.rs  mod.rs  models.rs  spatial.rs  transform.rs  validation.rs
crates/georag-core/src/llm/: embedding.rs  mod.rs  ollama.rs  ports.rs
crates/georag-core/src/models/: dataset.rs  document.rs  geometry.rs  query.rs  workspace.rs
crates/georag-core/src/ports/: storage.rs
crates/georag-core/src/processing/: chunk.rs
crates/georag-core/tests/: config_integration_test.rs  crs_handling_test.rs  format_metadata_test.rs  gpx_integration_test.rs
crates/georag-geo/: Cargo.toml
crates/georag-geo/src/: index.rs  lib.rs  models.rs  spatial.rs  transform.rs  validation.rs
crates/georag-llm/: Cargo.toml  README.md
crates/georag-llm/examples/: ollama_example.rs
crates/georag-llm/src/: embedding.rs  lib.rs  ollama.rs  ports.rs
crates/georag-retrieval/: Cargo.toml
crates/georag-retrieval/src/: embedding.rs  index.rs  lib.rs  models.rs  pipeline.rs
crates/georag-store/: Cargo.toml
crates/georag-store/migrations/: 001_initial_schema.sql  002_spatial_indexes.sql
crates/georag-store/src/: lib.rs  memory.rs  ports.rs
crates/georag-store/src/postgres/: config.rs  document.rs  index.rs  migrations.rs  mod.rs  spatial.rs  transaction.rs  vector.rs  workspace.rs
docs/: API.md  CLI.md  CONTRIBUTING.md  README.md  cli-reference.md  output-formatting.md  quick-start.md
