[workspace]
members = [
    "crates/georag-core",
    "crates/georag-geo",
    "crates/georag-retrieval",
    "crates/georag-llm",
    "crates/georag-store",
    "crates/georag-api",
    "crates/georag-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Welly Wahyudi"]
license = "MIT"
repository = "https://github.com/wellywahyudi/georag"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Geospatial
geo = "0.28"
geojson = "0.24"
proj = "0.27"
shapefile = "0.5"
wkt = "0.10"
rstar = "0.12"
gpx = "0.9"

# Document formats
pdf-extract = "0.7"
docx-rs = "0.4"

# XML parsing
quick-xml = "0.31"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
tabled = "0.15"

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }

# Testing
proptest = "1.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
