[workspace]
members = [
    "crates/georag-core",
    "crates/georag-geo",
    "crates/georag-retrieval",
    "crates/georag-llm",
    "crates/georag-store",
    "crates/georag-api",
    "crates/georag-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Welly Wahyudi"]
license = "MIT"
repository = "https://github.com/wellywahyudi/georag"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Geospatial
geo = "0.32"
geojson = "0.24"
proj = "0.31"
shapefile = "0.7"
wkt = "0.11"
rstar = "0.12"
gpx = "0.10"

# Document formats
pdf-extract = "0.7"
docx-rs = "0.4"

# XML parsing
quick-xml = "0.37"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
tabled = "0.17"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.13", features = ["json"] }

# Testing
proptest = "1.6"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
