[package]
name = "georag-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "georag"
path = "src/main.rs"

[dependencies]
georag-core = { path = "../georag-core" }
georag-geo = { path = "../georag-geo" }
georag-retrieval = { path = "../georag-retrieval" }
georag-store = { path = "../georag-store" }
georag-llm = { path = "../georag-llm" }
clap.workspace = true
console.workspace = true
tabled.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
geojson.workspace = true
chrono.workspace = true

# Interactive prompts
dialoguer = "0.11"

# Progress bars
indicatif = "0.17"

# Better error handling
thiserror = "1.0"

[dev-dependencies]
