[package]
name = "georag-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
async-trait.workspace = true
geojson.workspace = true
shapefile = "0.5"
wkt = "0.10"
gpx = "0.9"
kml = "0.8"
pdf-extract.workspace = true
docx-rs.workspace = true
tracing.workspace = true
quick-xml.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio.workspace = true
geo.workspace = true
proj.workspace = true
rstar.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.8"
serial_test = "3.0"
tokio.workspace = true
