[package]
name = "georag-geo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
georag-core = { path = "../georag-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
geo.workspace = true
geojson.workspace = true
proj.workspace = true

[dev-dependencies]
proptest.workspace = true
