[package]
name = "georag-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
georag-core = { path = "../georag-core" }
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true
