[package]
name = "georag-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
georag-core = { path = "../georag-core" }
georag-geo = { path = "../georag-geo" }
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true
