[package]
name = "georag-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
georag-core = { path = "../georag-core" }
georag-geo = { path = "../georag-geo" }
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true

# PostgreSQL dependencies
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "migrate", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true
testcontainers = "0.15"
chrono.workspace = true
